Fixed a minor overflow issue when locking the left sidebar would hide the handle

--- a/themes/atheos/modules/sidebar/_project_dock.scss
+++ b/themes/atheos/modules/sidebar/_project_dock.scss
@@ -10,6 +10,7 @@
 	left: 0;
 	right: $sidebarHandleWidth;
 	transition: height ease-in-out $transitionDuration;
+	overflow: hidden;
 
 	.content {
 		height: calc(100% - #{$topBarHeight});
