--- a/themes/atheos/modules/sidebar/_title.scss
+++ b/themes/atheos/modules/sidebar/_title.scss
@@ -3,6 +3,7 @@
 		position: absolute;
 		top: 0;
 		height: $topBarHeight;
+		overflow: hidden;
 
 
 		@include box-shadow;
